--- a/config.org
+++ b/config.org
@@ -11,7 +11,7 @@
 
 #+END_SRC
 
-* Package repositoriesp
+* Package repositories
 
 Extending the package archives with melpa and org/elpa 
 
@@ -27,7 +27,8 @@ Extending the package archives with melpa and org/elpa
     ("melpa"     . "http://melpa.org/packages/")))
 
 (package-initialize)
-(package-refresh-contents)
+
+;; (package-refresh-contents)
 
 #+END_SRC
 
@@ -43,26 +44,89 @@ Bootstrap use package
 (setq use-package-always-ensure t)
 
 #+END_SRC
-* Emacs Behavior
 
-** User Helpers
+* Emacs Looks and Feel
 
-*** Which Key
+#+BEGIN_SRC emacs-lisp
 
-#+begin_src emacs-lisp
+(use-package sexy-monochrome-theme
+  :config
+  (load-theme 'sexy-monochrome t))
+
+#+END_SRC
+
+* Emacs behavior
+
+** Disabling backup files
+
+#+BEGIN_SRC emacs-lisp
+
+(setq make-backup-files nil)
+
+
+#+END_SRC
+
+n** User helpers
+
+*** Which key
+
+#+BEGIN_SRC emacs-lisp
 
 (use-package which-key
   :config (which-key-mode)
           (which-key-setup-side-window-bottom)
           (setq which-key-idle-delay 0.5))
 
-#+end_src
+#+END_SRC
 
-** Git Workflow
+** Git workflow
 
-#+begin_src emacs-lisp
+#+BEGIN_SRC emacs-lisp
 
 (use-package magit
   :config (global-set-key (kbd "C-x g") 'magit-status))
 
+#+END_SRC
+
+* Org mode
+
+** Aesthetics
+
+#+BEGIN_SRC emacs-lisp
+
+(use-package org-bullets
+  :hook (org-mode . org-bullets-mode))
+
+(use-package f) ; f-delete, f-mkdir, f-move, f-bexists?, f-hidden?
+
+;; (setq org-bullets-bullet-list '("\u200b"))
+
+(require 'org)
+
+(custom-set-faces
+ '(org-document-title ((t (:weight thin 2.0))))
+ '(org-level-1 ((t (:inherit header-line :height 2.0))))
+ '(org-level-2 ((t (:inherit header-line :height 1.8))))
+ '(org-level-3 ((t (:inherit header-line :height 1.0))))
+ '(org-level-4 ((t (:inherit outline-4 :height 1.0))))
+ '(org-level-5 ((t (:inherit outline-5 :height 1.0)))))
+
+(message "Set the custom face")
+
+#+END_SRC
+* Languages
+
+** Lisp
+
+#+begin_src emacs-lisp
+
+(use-package lispy)
+
 #+end_src
+
+** GDScript
+
+#+BEGIN_SRC emacs-lisp
+(add-to-list 'load-path "~/.emacs.d/emacs-gdscript-mode")
+(require 'gdscript-mode)
+#+END_SRC
